Styling updates - changed size and added rules to prevent overlap

--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,3 @@
-h1 {
-  font-size: 4em;
-}
-
 #app {
   height: 100vh;
   width: 100vw;
@@ -11,13 +7,21 @@ h1 {
   justify-content: center;
 }
 
+h1 {
+  margin-top: 0;
+  font-size: 4em;
+  height: 10vh;
+}
+
 #calculator {
-  height: 50vh;
-  width: 50vw;
+  height: 70vh;
+  width: 35vw;
   border: 1.5mm ridge white;
   border-radius: 4px;
   box-shadow: 0 0 4px 1px rgba(255, 255, 255, 0.5);
-  background-color:rgb(13, 111, 111);
+  background-color:rgb(25, 120, 132);
+  overflow: scroll;
+  margin-top: 20px;
 }
 
 #display {
@@ -30,6 +34,7 @@ h1 {
   border-radius: 4px;
   font-family: "Changa", sans-serif;
   color: rgb(199, 185, 88);
+  overflow: scroll;
 }
 
 #buttons {
